<resources>
    <string name="app_name">QR scanner</string>
    <string name="title_activity_getivity">getivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="create_new_account">Create new account</string>
    <string name="login">Login to existing</string>
    <string name="account_manager">Account Manager</string>
    <string name="add_scanned_room_id">Add Scanned Room Id</string>
    <string name="finish">Finish</string>
    <string name="picture_of_my_qr">picture_of_my_qr</string>
    <string name="my_qr">My QR</string>
    <string name="help">Help</string>
    <string name="scan_qr_button">Scan QR button</string>
    <string name="covid_tracking_capstone_team_2022">Covid Tracking Capstone Team @ 2022</string>
    <string name="settings">SETTINGS</string>
    <string name="title_activity_help">HelpActivity</string>
</resources>